Movie deatils screen is added and recyler view click listener part is also done

--- a/app/src/main/res/layout/list_view_child_element.xml
+++ b/app/src/main/res/layout/list_view_child_element.xml
@@ -70,6 +70,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/mArrowNext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
